--- a/00-computer-setup.html
+++ b/00-computer-setup.html
@@ -285,7 +285,7 @@ div.tocify {
       <a href="01-B-Rmarkdown-intro.html">R markdown</a>
     </li>
     <li>
-      <a href="01-C-ggplot2-intro.html">ggplot2</a>
+      <a href="01-C-R-workshop.html">R workshop</a>
     </li>
   </ul>
 </li>
@@ -297,7 +297,7 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="02-A-R-workshop.html">R workshop</a>
+      <a href="02-A-tidyr.html">ggplot2 and tidyr</a>
     </li>
     <li>
       <a href="02-B-git-intro.html">Intro to git</a>
@@ -315,10 +315,10 @@ div.tocify {
       <a href="03-A-data-exploration.html">Data exploration</a>
     </li>
     <li>
-      <a href="03-B-topic-name.html">Linear models</a>
+      <a href="03-B-linear-models.html">Linear models</a>
     </li>
     <li>
-      <a href="03-C-topic-name.html">Heterogeneity</a>
+      <a href="03-C-heterogeneity.html">Heterogeneity</a>
     </li>
   </ul>
 </li>
@@ -348,13 +348,13 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="05-A-topic-name.html">Bayesian linear models</a>
+      <a href="05-A-Bayesian-linear-models.html">Bayesian linear models</a>
     </li>
     <li>
-      <a href="05-B-topic-name.html">Bayesian hierarchical models</a>
+      <a href="05-B-Bayesian-priors.html">Bayesian inference with prior information</a>
     </li>
     <li>
-      <a href="05-C-topic-name.html">Bayesian non-linear models</a>
+      <a href="05-C-Advanced-bayesian-example.html">Advanced Bayesian model example</a>
     </li>
   </ul>
 </li>
@@ -626,7 +626,7 @@ div.tocify {
 </div>
 <div id="linux-1" class="section level4">
 <h4>Linux</h4>
-<p>You may already have Git installed. If not, you can try to install it via your distro’s package manager. For Debian/Ubuntu run <code>sudo apt-get install git</code> and for Fedora run <code>sudo yum install git</code>.</p>
+<p>You may already have Git installed. If not, you can try to install it via your distroâ€™s package manager. For Debian/Ubuntu run <code>sudo apt-get install git</code> and for Fedora run <code>sudo yum install git</code>.</p>
 <hr />
 <blockquote>
 <p>Attribution</p>
