--- a/00-computer-setup.html
+++ b/00-computer-setup.html
@@ -607,7 +607,7 @@ div.tocify {
 <li>Select “Use Windows’ default console window”.</li>
 <li>If you forgot to do any of these, rerun the installer and select the appropriate options.</li>
 </ul></li>
-<li>That’s it! You should now have three new programs installed in a folder called Git under your Progra Files.</li>
+<li>That’s it! You should now have three new programs installed in a folder called Git under your Program Files.</li>
 </ol>
 </div>
 <div id="macos-1" class="section level4">
@@ -626,7 +626,7 @@ div.tocify {
 </div>
 <div id="linux-1" class="section level4">
 <h4>Linux</h4>
-<p>You may already have Git installed. If not, you can try to install it via your distroâ€™s package manager. For Debian/Ubuntu run <code>sudo apt-get install git</code> and for Fedora run <code>sudo yum install git</code>.</p>
+<p>You may already have Git installed. If not, you can try to install it via your distro’s package manager. For Debian/Ubuntu run <code>sudo apt-get install git</code> and for Fedora run <code>sudo yum install git</code>.</p>
 <hr />
 <blockquote>
 <p>Attribution</p>
