Changed Key points content

--- a/03-B-linear-models.html
+++ b/03-B-linear-models.html
@@ -503,6 +503,9 @@ div.tocify {
 </blockquote>
 <div id="key-points" class="section level3">
 <h3>Key Points</h3>
+<ul>
+<li>Learn linear models</li>
+</ul>
 </div>
 <div id="analysis-example" class="section level3">
 <h3>Analysis Example</h3>
@@ -536,7 +539,7 @@ $(document).ready(function () {
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
