--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@ div.tocify {
 <td>Mon</td>
 <td>Oct. 30</td>
 <td>Topic 10. Unconstrained ordination</td>
-<td>Jes</td>
+<td>Tad</td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -669,7 +669,7 @@ div.tocify {
 <td>Wed</td>
 <td>Nov. 1</td>
 <td>Topic 11. Constrained ordination</td>
-<td>Jes</td>
+<td>Tad</td>
 <td></td>
 </tr>
 <tr class="even">
@@ -799,12 +799,10 @@ div.tocify {
 <h3>Assigned Readings</h3>
 <p>All assigned readings can be obtained for free through Stanford library online resources.</p>
 <ul>
-<li>Beale, C. M., Lennon, J. J., Yearsley, J. M., Brewer, M. J. and Elston, D. A. (2010), <em>Regression analysis of spatial data</em>. Ecology Letters, 13: 246â€“264. <a href="DOI:%5B10.1111/j.1461-0248.2009.01422.x%5D(http://dx.doi.org/10.1111/j.1461-0248.2009.01422.x)" class="uri">DOI:[10.1111/j.1461-0248.2009.01422.x](http://dx.doi.org/10.1111/j.1461-0248.2009.01422.x)</a></li>
 <li>Borcard, D., Gillet, F. and Legendre, P. (2011), <em>Numerical Ecology with R.</em> Springer. <a href="https://link.springer.com/book/10.1007/978-1-4419-7976-6">Stanford Full Text</a></li>
 <li>Korner-Nievergelt et al. (2015), <em>Bayesian data analysis in ecology using linear models with R, BUGS, and Stan.</em> Elsevier. <a href="http://www.sciencedirect.com/science/book/9780128013700">Stanford Full Text</a></li>
-<li>Martin, T. G., Wintle, B. A., Rhodes, J. R., Kuhnert, P. M., Field, S. A., Low-Choy, S. J., Tyre, A. J. and Possingham, H. P. (2005), <em>Zero tolerance ecology: improving ecological inference by modelling the source of zero observations</em>. Ecology Letters, 8: 1235â€“1246. <a href="DOI:%5B10.1111/j.1461-0248.2005.00826.x%5D(http://dx.doi.org/10.1111/j.1461-0248.2005.00826.x)" class="uri">DOI:[10.1111/j.1461-0248.2005.00826.x](http://dx.doi.org/10.1111/j.1461-0248.2005.00826.x)</a></li>
-<li>Ramette, A. (2007), <em>Multivariate analyses in microbial ecology</em>. FEMS Microbiology Ecology, 62: 142â€“160. DOI: <a href="http:dx.doi.org/10.1111/j.1574-6941.2007.00375.x">10.1111/j.1574-6941.2007.00375.x</a></li>
-<li>Wagner, H. H. and Fortin, M.-J. (2005), <em>Spatial analysis of landscapes: concepts and statistics</em>. Ecology, 86: 1975â€“1987. DOI: <a href="http://dx.doi.org/10.1890/04-0914">10.1890/04-0914</a></li>
+<li>Martin, T. G., Wintle, B. A., Rhodes, J. R., Kuhnert, P. M., Field, S. A., Low-Choy, S. J., Tyre, A. J. and Possingham, H. P. (2005), <em>Zero tolerance ecology: improving ecological inference by modelling the source of zero observations</em>. Ecology Letters, 8: 1235-1246. <a href="DOI:%5B10.1111/j.1461-0248.2005.00826.x%5D(http://dx.doi.org/10.1111/j.1461-0248.2005.00826.x)" class="uri">DOI:[10.1111/j.1461-0248.2005.00826.x](http://dx.doi.org/10.1111/j.1461-0248.2005.00826.x)</a></li>
+<li>Ramette, A. (2007), <em>Multivariate analyses in microbial ecology</em>. FEMS Microbiology Ecology, 62: 142-160. DOI: <a href="http:dx.doi.org/10.1111/j.1574-6941.2007.00375.x">10.1111/j.1574-6941.2007.00375.x</a></li>
 <li>Wickham, H. (2016), <em>ggplot2: Elegant Graphics for Data Analysis</em>. Springer. <a href="https://link-springer-com.stanford.idm.oclc.org/book/10.1007%2F978-3-319-24277-4">Stanford Full Text</a></li>
 <li>Zuur, A. F., Leno, E. N., Walker, N., Savliev, A. A. and Smith, G. M. (2009), <em>Mixed Effect Models and Extensions in Ecology with R.</em> Springer. <a href="https://link.springer.com/book/10.1007%2F978-0-387-87458-6">Stanford Full Text</a></li>
 <li>Zuur, A. F. (2010), <em>A protocol for data exploration to avoid common statistical problems.</em> Methods in Ecology and Evolution <strong>1</strong>: 3-14. DOI: <a href="http://dx.doi.org/10.1111/j.2041-210X.2009.00001.x">10.1111/j.2041-210X.2009.00001.x</a></li>
@@ -813,10 +811,12 @@ div.tocify {
 <div id="additional-suggested-references" class="section level3">
 <h3>Additional Suggested References</h3>
 <ul>
+<li>Beale, C. M., Lennon, J. J., Yearsley, J. M., Brewer, M. J. and Elston, D. A. (2010), <em>Regression analysis of spatial data</em>. Ecology Letters, 13: 246-264. <a href="DOI:%5B10.1111/j.1461-0248.2009.01422.x%5D(http://dx.doi.org/10.1111/j.1461-0248.2009.01422.x)" class="uri">DOI:[10.1111/j.1461-0248.2009.01422.x](http://dx.doi.org/10.1111/j.1461-0248.2009.01422.x)</a></li>
 <li>Legendre, P. and L. Legendre. (2012), <em>Numerical Ecology</em>. Elsevier. <a href="http://www.sciencedirect.com/science/bookseries/01678892/24">Stanford Full Text</a></li>
 <li>McElreath, R. (2016), <em>Statistical rethinking: a Bayesian course with examples in R and Stan</em>. CRC Press. <em>Available in the Science and Marine libraries</em> <a href="http://xcelab.net/rm/statistical-rethinking/">Author’s website</a></li>
 <li>Venables, W. N., Smith, D. M. and the R Core Team. (2012), <em>An Introduction to R: Notes on R: A Programming Environment for Data Analysis and Graphics</em>. Version 2.15.1. <a href="https://cran.r-project.org/doc/manuals/r-release/R-intro.pdf">full text</a></li>
-<li>Zuur, A. F., J. M. Hilbe and E. N. Ieno. (2013), *A beginner’s guide to GLM and GLMM with R: a frequentist and Bayesian perspective for ecologists. Highland Statistics Ltd. <a href="https://searchworks.stanford.edu/view/11749213">Stanford Library Record</a></li>
+<li>Wagner, H. H. and Fortin, M.-J. (2005), <em>Spatial analysis of landscapes: concepts and statistics</em>. Ecology, 86: 1975–1987. DOI: <a href="http://dx.doi.org/10.1890/04-0914">10.1890/04-0914</a></li>
+<li>Zuur, A. F., J. M. Hilbe and E. N. Ieno. (2013), <em>A beginner’s guide to GLM and GLMM with R: a frequentist and Bayesian perspective for ecologists.</em> Highland Statistics Ltd. <a href="https://searchworks.stanford.edu/view/11749213">Stanford Library Record</a></li>
 </ul>
 </div>
 </div>
@@ -846,7 +846,7 @@ $(document).ready(function () {
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
