Made lesson pages for all days except week 9. Updated navigation bar to reflect new pages. Added reading assignments to most pages.

--- a/08-C-bayesian-spatial.html
+++ b/08-C-bayesian-spatial.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Jes" />
 
 
-<title>Introduction to R</title>
+<title>Bayesian spatial analysis</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -503,20 +503,24 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Introduction to R</h1>
+<h1 class="title toc-ignore">Bayesian spatial analysis</h1>
 <h4 class="author"><em>Jes</em></h4>
 
 </div>
 
 
-<p><strong>Suggested Reading:</strong></p>
+<p><strong>Assigned Reading:</strong></p>
 <blockquote>
-<p>Chapter 2 in Korner-Nievergelt et al. 2015. <em>Bayesian data analysis in ecology using linear models with R, BUGS, and Stan.</em> Elsevier. <a href="http://www.sciencedirect.com/science/book/9780128013700">link</a></p>
+<p>TBD: will use spBayes or R-INLA</p>
 </blockquote>
-<p>Today’s class is an optional session for students who are new to R or who want a more formal introduction to R’s terminology and data structures.</p>
-<div id="lesson-materials" class="section level3">
-<h3>Lesson Materials</h3>
-<p>We will be working through the Data Carpentry ecology lessons <a href="http://www.datacarpentry.org/R-ecology-lesson/01-intro-to-r.html">Introduction to R</a> and <a href="http://www.datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with data</a>. Rather than reproduce the lesson materials here, you can find them at the links listed above.</p>
+<div id="key-points" class="section level3">
+<h3>Key Points</h3>
+</div>
+<div id="analysis-example" class="section level3">
+<h3>Analysis Example</h3>
+</div>
+<div id="discussion-questions" class="section level3">
+<h3>Discussion Questions</h3>
 </div>
 
 
