--- a/00-computer-setup.html
+++ b/00-computer-setup.html
@@ -330,13 +330,13 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="04-A-topic-name.html">Mixed effects models</a>
+      <a href="04-A-mixed-models.html">Mixed effects models</a>
     </li>
     <li>
-      <a href="04-B-topic-name.html">Binary &amp; proportional data</a>
+      <a href="04-B-binary-data.html">Binary &amp; proportional data</a>
     </li>
     <li>
-      <a href="04-C-topic-name.html">Zero-inflated data</a>
+      <a href="04-C-zero-data.html">Zero-inflated data</a>
     </li>
   </ul>
 </li>
@@ -366,13 +366,13 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="06-A-topic-name.html">Unconstrained ordination</a>
+      <a href="06-A-unconstrained-ordination.html">Unconstrained ordination</a>
     </li>
     <li>
-      <a href="06-B-topic-name.html">Constrained ordination</a>
+      <a href="06-B-constrained-ordination.html">Constrained ordination</a>
     </li>
     <li>
-      <a href="06-C-topic-name.html">Comparing multivariate data</a>
+      <a href="06-C-matrix-comparison.html">Comparing multivariate data</a>
     </li>
   </ul>
 </li>
@@ -384,28 +384,34 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="07-midquarter-student-name1.html">Student 1</a>
+      <a href="07-midquarter-anna.html">Anna</a>
     </li>
     <li>
-      <a href="07-midquarter-student-name2.html">Student 2</a>
+      <a href="07-midquarter-beth.html">Beth</a>
     </li>
     <li>
-      <a href="07-midquarter-student-name3.html">Student 3</a>
+      <a href="07-midquarter-jamie.html">Jamie</a>
     </li>
     <li>
-      <a href="07-midquarter-student-name4.html">Student 4</a>
+      <a href="07-midquarter-lizzie.html">Lizzie</a>
     </li>
     <li>
-      <a href="07-midquarter-student-name5.html">Student 5</a>
+      <a href="07-midquarter-marissa.html">Marissa</a>
     </li>
     <li>
-      <a href="07-midquarter-student-name6.html">Student 6</a>
+      <a href="07-midquarter-meghan.html">Meghan</a>
     </li>
     <li>
-      <a href="07-midquarter-student-name7.html">Student 7</a>
+      <a href="07-midquarter-nick.html">Nick</a>
     </li>
     <li>
-      <a href="07-midquarter-student-name8.html">Student 8</a>
+      <a href="07-midquarter-nicole.html">Nicole</a>
+    </li>
+    <li>
+      <a href="07-midquarter-priscilla.html">Priscilla</a>
+    </li>
+    <li>
+      <a href="07-midquarter-tyler.html">Tyler</a>
     </li>
   </ul>
 </li>
@@ -417,13 +423,13 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="08-A-topic-name.html">Spatial analysis (Zuur)</a>
+      <a href="08-A-spatial-autocorrelation.html">Spatial autocorrelation</a>
     </li>
     <li>
-      <a href="08-B-topic-name.html">Spatial analysis (Borcard)</a>
+      <a href="08-B-spatial-filters.html">Spatial filters</a>
     </li>
     <li>
-      <a href="08-C-topic-name.html">Bayesian spatial analysis</a>
+      <a href="08-C-bayesian-spatial.html">Bayesian spatial analysis</a>
     </li>
   </ul>
 </li>
@@ -453,28 +459,34 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="07-midquarter-student-name1.html">Student 1</a>
+      <a href="10-final-anna.html">Anna</a>
     </li>
     <li>
-      <a href="07-midquarter-student-name2.html">Student 2</a>
+      <a href="10-final-beth.html">Beth</a>
     </li>
     <li>
-      <a href="07-midquarter-student-name3.html">Student 3</a>
+      <a href="10-final-jamie.html">Jamie</a>
     </li>
     <li>
-      <a href="07-midquarter-student-name4.html">Student 4</a>
+      <a href="10-final-lizzie.html">Lizzie</a>
     </li>
     <li>
-      <a href="07-midquarter-student-name5.html">Student 5</a>
+      <a href="10-final-marissa.html">Marissa</a>
     </li>
     <li>
-      <a href="07-midquarter-student-name6.html">Student 6</a>
+      <a href="10-final-meghan.html">Meghan</a>
     </li>
     <li>
-      <a href="07-midquarter-student-name7.html">Student 7</a>
+      <a href="10-final-nick.html">Nick</a>
     </li>
     <li>
-      <a href="07-midquarter-student-name8.html">Student 8</a>
+      <a href="10-final-nicole.html">Nicole</a>
+    </li>
+    <li>
+      <a href="10-final-priscilla.html">Priscilla</a>
+    </li>
+    <li>
+      <a href="10-final-tyler.html">Tyler</a>
     </li>
   </ul>
 </li>
@@ -637,7 +649,7 @@ div.tocify {
 </div>
 <div id="linux-1" class="section level4">
 <h4>Linux</h4>
-<p>You may already have Git installed. If not, you can try to install it via your distro’s package manager. For Debian/Ubuntu run <code>sudo apt-get install git</code> and for Fedora run <code>sudo yum install git</code>.</p>
+<p>You may already have Git installed. If not, you can try to install it via your distroâ€™s package manager. For Debian/Ubuntu run <code>sudo apt-get install git</code> and for Fedora run <code>sudo yum install git</code>.</p>
 <hr />
 <blockquote>
 <p>Attribution</p>
