--- a/06-C-matrix-comparison.html
+++ b/06-C-matrix-comparison.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Jes" />
 
 
-<title>Introduction to R</title>
+<title>Comparing multivariate data</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -503,20 +503,27 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Introduction to R</h1>
+<h1 class="title toc-ignore">Comparing multivariate data</h1>
+<h3 class="subtitle"><em>symmetric methods for comparing two matrices OR three-table methods</em></h3>
 <h4 class="author"><em>Jes</em></h4>
 
 </div>
 
 
-<p><strong>Suggested Reading:</strong></p>
+<p><strong>Assigned Reading:</strong></p>
 <blockquote>
-<p>Chapter 2 in Korner-Nievergelt et al. 2015. <em>Bayesian data analysis in ecology using linear models with R, BUGS, and Stan.</em> Elsevier. <a href="http://www.sciencedirect.com/science/book/9780128013700">link</a></p>
+<p>Sections 10.5 and 11.5 from: Legendre, P. and L. Legendre. 2012. <em>Numerical Ecology</em>. Elsevier. <a href="http://www.sciencedirect.com/science/bookseries/01678892/24">link</a></p>
+<p>OR</p>
+<p>Dray, S. P. et al. 2014. Combining the fourth-corner and RLQ methods for assessing trait responses to environmental variation. <em>Ecology</em> <strong>95</strong>: 14-21. <a href="http://dx.doi.org/10.1890/13-0196.1">DOI: 10.1890/13-0196.1</a>. and Supplement 1: A tutorial to perform fourth-corner and RLQ analyses in R. <a href="http://esapubs.org/archive/ecol/E095/002/suppl-1.php">Ecological Archives E095-002-S1</a></p>
 </blockquote>
-<p>Today’s class is an optional session for students who are new to R or who want a more formal introduction to R’s terminology and data structures.</p>
-<div id="lesson-materials" class="section level3">
-<h3>Lesson Materials</h3>
-<p>We will be working through the Data Carpentry ecology lessons <a href="http://www.datacarpentry.org/R-ecology-lesson/01-intro-to-r.html">Introduction to R</a> and <a href="http://www.datacarpentry.org/R-ecology-lesson/02-starting-with-data.html">Starting with data</a>. Rather than reproduce the lesson materials here, you can find them at the links listed above.</p>
+<div id="key-points" class="section level3">
+<h3>Key Points</h3>
+</div>
+<div id="analysis-example" class="section level3">
+<h3>Analysis Example</h3>
+</div>
+<div id="discussion-questions" class="section level3">
+<h3>Discussion Questions</h3>
 </div>
 
 
